Update layout to ensure alignment of headings is the same across pages

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -52,25 +52,25 @@ section {
   display: flex;
   align-items: stretch;
   text-align: center;
-  padding: 40px 120px 0px 0px;
+  padding: 20px 120px 2px 0px;
 }
 
 .section-title h1 {
   margin: 0;
-  padding: 0 30px 0 0;
+  padding: 0 20px 0 0;
 }
 
 .section-title a img {
-  height: 1.5em;
-  width: 1.5em;
+  height: 1.3em;
+  width: 1.3em;
   margin: 0 15px 0 0;
 }
 
 .fsSubmitButton {
-  height: 1.5em;
-  width: 1.5em;
+  height: 1.3em;
+  width: 1.3em;
   border: 0;
-  padding-bottom: 1px;
+  padding-bottom: 0px;
 }
 
 section.panel {
